# design_system

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-dehaat-design-system.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/dehaatdesignsystem/: DehaatDesignSystemModule.kt  DehaatDesignSystemPackage.kt
cpp/: react-native-dehaat-design-system.cpp  react-native-dehaat-design-system.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/dehaatdesignsystem/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/DehaatDesignSystemExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/DehaatDesignSystemExample.xcodeproj/: project.pbxproj
example/ios/DehaatDesignSystemExample.xcodeproj/xcshareddata/xcschemes/: DehaatDesignSystemExample.xcscheme
example/src/: App.tsx
ios/: DehaatDesignSystem.h  DehaatDesignSystem.mm
src/: NativeDehaatDesignSystem.ts  index.tsx
src/components/: AppButton.tsx
